--- a/MPfm/MPfm.WPF/Classes/Windows/SyncMenuWindow.xaml
+++ b/MPfm/MPfm.WPF/Classes/Windows/SyncMenuWindow.xaml
@@ -4,46 +4,111 @@
         xmlns:base="clr-namespace:MPfm.WPF.Classes.Windows.Base"
         xmlns:controls="clr-namespace:MPfm.WPF.Classes.Controls"
         WindowStartupLocation="CenterScreen" Background="#FF242F35"
-        Title="Sync (Nearby Devices)" Height="426" Width="677.9" Icon="/MPfm.WPF;component/Resources/Icon.ico">
-    <Grid Margin="0">
+        Title="Sync with" Height="426" Width="677.9" Icon="/MPfm.WPF;component/Resources/Icon.ico">
+    <Grid Margin="0" Background="#FF242F35">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0" Orientation="Vertical" Margin="4">
-            <Label Content="Sync (Nearby Devices)" Foreground="White" FontSize="16" FontWeight="Bold" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" Padding="4,2,4,2" />
-            <Label x:Name="lblIPAddress" Content="My IP address is" Foreground="#FFCCCCCC" FontSize="12" FontFamily="/Resources/Fonts/#Junction" Padding="4,2,4,2" />
-        </StackPanel>
-        <ListView Grid.Row="1">
-        </ListView>
-        <Grid Grid.Row="2" Margin="2">
+        <Grid Grid.Row="0" Background="#FF455865">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
                 <ColumnDefinition />
                 <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
-            <Button Grid.Column="0" x:Name="btnRefresh">
-                <StackPanel Orientation="Horizontal" Margin="8">
-                    <Image Source="/Resources/Images/Buttons/refresh.png" Stretch="None" />
-                    <TextBlock Margin="6,0,0,0">Refresh devices</TextBlock>
+            <Label Grid.Column="0" x:Name="lblTitle" Content="Sync with" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" />
+            <Button Grid.Column="1" Style="{StaticResource HeaderImageButton}">
+                <StackPanel Orientation="Horizontal" Margin="4">
+                    <Image Source="/Resources/Images/Buttons/download.png" Stretch="None" />
+                    <TextBlock Margin="6,1,0,0">Sync</TextBlock>
                 </StackPanel>
             </Button>
-            <StackPanel Grid.Column="1"></StackPanel>
-            <Button Grid.Column="2" x:Name="btnManualConnect">
-                <StackPanel Orientation="Horizontal" Margin="8">
-                    <Image Source="/Resources/Images/Buttons/connect.png" Stretch="None" />
-                    <TextBlock Margin="6,0,0,0">Connect manually to device</TextBlock>
-                </StackPanel>
-            </Button>
-            <Button Grid.Column="3" x:Name="btnConnect">
-                <StackPanel Orientation="Horizontal" Margin="8">
-                    <Image Source="/Resources/Images/Buttons/connect.png" Stretch="None" />
-                    <TextBlock Margin="6,0,0,0">Connect to device</TextBlock>
-                </StackPanel>
-            </Button>
-        </Grid>        
+        </Grid>
+        <Grid Grid.Row="1">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <Grid Grid.Row="0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+                    <TreeView Grid.Column="0" x:Name="treeViewItems">
+                    </TreeView>
+                    <Grid Grid.Column="1">
+                        <Grid.RowDefinitions>
+                            <RowDefinition />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition />
+                        </Grid.RowDefinitions>
+                        <Button Grid.Row="1">
+                            <StackPanel Orientation="Horizontal" Margin="8,4,8,4">
+                                <Label FontSize="11" FontFamily="/Resources/Fonts/#Junction" VerticalContentAlignment="Center" Foreground="White" Margin="0">&gt;</Label>
+                            </StackPanel>
+                        </Button>
+                        <Button Grid.Row="2">
+                            <StackPanel Orientation="Horizontal" Margin="8,4,8,4">
+                                <Label FontSize="11" FontFamily="/Resources/Fonts/#Junction" VerticalContentAlignment="Center" Foreground="White" Margin="0">&lt;</Label>
+                            </StackPanel>
+                        </Button>
+                        <Button Grid.Row="3">
+                            <StackPanel Orientation="Horizontal" Margin="8,4,8,4">
+                                <Label FontSize="11" FontFamily="/Resources/Fonts/#Junction" VerticalContentAlignment="Center" Foreground="White" Margin="0">&gt;&gt;</Label>
+                            </StackPanel>
+                        </Button>
+                        <Button Grid.Row="4">
+                            <StackPanel Orientation="Horizontal" Margin="8,4,8,4">
+                                <Label FontSize="11" FontFamily="/Resources/Fonts/#Junction" VerticalContentAlignment="Center" Foreground="White" Margin="0">&lt;&lt;</Label>
+                            </StackPanel>
+                        </Button>
+                    </Grid>
+                    <TreeView Grid.Column="2" x:Name="listViewSelection">
+                    </TreeView>
+                </Grid>
+                <Grid Grid.Row="1" Margin="2">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+                    <Grid Grid.Column="0">
+                        <Grid.RowDefinitions>
+                            <RowDefinition />
+                            <RowDefinition />
+                        </Grid.RowDefinitions>
+                        <Label Grid.Row="0" x:Name="lblTotal" Content="[Total]" Foreground="White" FontSize="12" FontFamily="/Resources/Fonts/#Junction" />
+                        <Label Grid.Row="1" x:Name="lblFreeSpace" Content="[Free space]" Foreground="#FFDDDDDD" FontSize="11" FontFamily="/Resources/Fonts/#Junction" />
+                    </Grid>
+                    <StackPanel Grid.Column="1"></StackPanel>
+                    <Button Grid.Column="2" x:Name="btnSelectAll">
+                        <StackPanel Orientation="Horizontal" Margin="8,4,8,4">
+                            <Label FontSize="11" FontFamily="/Resources/Fonts/#Junction" VerticalContentAlignment="Center" Foreground="White" Margin="0">Select All</Label>
+                        </StackPanel>
+                    </Button>
+                </Grid>
+            </Grid>
+            <Grid x:Name="gridLoading" Background="#FF242F35" Margin="0" Visibility="Hidden">
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <StackPanel Grid.Row="0"></StackPanel>
+                <Grid Grid.Row="1" Margin="20">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="20" />
+                    </Grid.RowDefinitions>
+                    <Label Grid.Row="0" x:Name="lblLoading" Content="Loading..." Foreground="White" FontSize="12" FontFamily="/Resources/Fonts/#Junction" HorizontalAlignment="Center" Margin="4" />
+                    <ProgressBar Grid.Row="1" x:Name="progressBar" Background="#FF242F35" BorderBrush="#FF242F35" Foreground="#FFE74C3C" Value="50" Margin="2" VerticalContentAlignment="Center" IsIndeterminate="True" />
+                </Grid>
+                <StackPanel Grid.Row="2"></StackPanel>
+            </Grid>
+        </Grid>
     </Grid>
 </base:BaseWindow>
