--- a/MPfm/MPfm.WPF/Classes/Windows/SyncWindow.xaml
+++ b/MPfm/MPfm.WPF/Classes/Windows/SyncWindow.xaml
@@ -3,45 +3,68 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"        
         xmlns:base="clr-namespace:MPfm.WPF.Classes.Windows.Base"
         xmlns:controls="clr-namespace:MPfm.WPF.Classes.Controls"
+        xmlns:models="clr-namespace:MPfm.Library.Objects;assembly=MPfm.Library"
         WindowStartupLocation="CenterScreen" Background="#FF242F35"
         Title="Sync (Nearby Devices)" Height="426" Width="677.9" Icon="/MPfm.WPF;component/Resources/Icon.ico">
     <Grid Margin="0">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition />
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0" Orientation="Vertical" Margin="4">
-            <Label Content="Sync (Nearby Devices)" Foreground="White" FontSize="16" FontWeight="Bold" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" Padding="4,2,4,2" />
-            <Label x:Name="lblIPAddress" Content="My IP address is" Foreground="#FFCCCCCC" FontSize="12" FontFamily="/Resources/Fonts/#Junction" Padding="4,2,4,2" />
-        </StackPanel>
-        <ListView Grid.Row="1">
+        <Grid Grid.Row="0" Background="#FF455865">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <Label Grid.Column="0" Content="Sync (Nearby Devices)" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" />
+            <Label Grid.Column="1" x:Name="lblIPAddress" Content="" Foreground="#FFDDDDDD" FontSize="12" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" VerticalContentAlignment="Center" />
+        </Grid>        
+        <Grid Grid.Row="1" Margin="4,8,4,8">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition Width="100" />
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="0" Foreground="#FFDDDDDD" FontSize="11" FontFamily="/Resources/Fonts/#Junction">
+                Searching for devices running Sessions on your local network...
+            </TextBlock>
+            <ProgressBar Grid.Column="1" x:Name="progressBar" Background="#FF242F35" BorderBrush="#FF242F35" Foreground="#FFE74C3C" Value="0" Margin="2" VerticalContentAlignment="Center" />
+        </Grid>
+        <ListView Grid.Row="2" x:Name="listView">
+            <ListView.Resources>
+                <HierarchicalDataTemplate DataType="{x:Type models:SyncDevice}" ItemsSource="{Binding SubItems}">
+                    <StackPanel Orientation="Horizontal" Margin="4">
+                        <Image Source="/Resources/Images/Icons/linux.png" Stretch="Uniform" />
+                        <TextBlock Text="{Binding Name}" FontSize="11" FontFamily="/Resources/Fonts/#Junction" Foreground="#333333" Margin="4,0,0,0" />
+                    </StackPanel>
+                </HierarchicalDataTemplate>
+            </ListView.Resources>
         </ListView>
-        <Grid Grid.Row="2" Margin="2">
+        <Grid Grid.Row="3" Margin="0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition />
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
-            <Button Grid.Column="0" x:Name="btnRefresh">
-                <StackPanel Orientation="Horizontal" Margin="8">
-                    <Image Source="/Resources/Images/Buttons/refresh.png" Stretch="None" />
-                    <TextBlock Margin="6,0,0,0">Refresh devices</TextBlock>
+            <Button Grid.Column="0" x:Name="btnRefresh" Click="btnRefresh_OnClick">
+                <StackPanel Orientation="Horizontal" Margin="8,4,8,4">
+                    <Image x:Name="imageRefreshButton" Source="/Resources/Images/Buttons/cancel.png" Stretch="None" />
+                    <Label x:Name="lblRefreshButton" FontSize="11" FontFamily="/Resources/Fonts/#Junction" VerticalContentAlignment="Center" Foreground="White" Margin="6,0,0,0">Cancel refresh</Label>
                 </StackPanel>
             </Button>
             <StackPanel Grid.Column="1"></StackPanel>
-            <Button Grid.Column="2" x:Name="btnManualConnect">
-                <StackPanel Orientation="Horizontal" Margin="8">
+            <Button Grid.Column="2" x:Name="btnConnectManual" Click="btnConnectManual_OnClick">
+                <StackPanel Orientation="Horizontal" Margin="8,4,8,4">
                     <Image Source="/Resources/Images/Buttons/connect.png" Stretch="None" />
-                    <TextBlock Margin="6,0,0,0">Connect manually to device</TextBlock>
+                    <Label FontSize="11" FontFamily="/Resources/Fonts/#Junction" VerticalContentAlignment="Center" Foreground="White" Margin="6,0,0,0">Connect manually to device</Label>
                 </StackPanel>
             </Button>
-            <Button Grid.Column="3" x:Name="btnConnect">
-                <StackPanel Orientation="Horizontal" Margin="8">
+            <Button Grid.Column="3" x:Name="btnConnect" Click="btnConnect_OnClick">
+                <StackPanel Orientation="Horizontal" Margin="8,4,8,4">
                     <Image Source="/Resources/Images/Buttons/connect.png" Stretch="None" />
-                    <TextBlock Margin="6,0,0,0">Connect to device</TextBlock>
+                    <Label FontSize="11" FontFamily="/Resources/Fonts/#Junction" VerticalContentAlignment="Center" Foreground="White" Margin="6,0,0,0">Connect to device</Label>
                 </StackPanel>
             </Button>
         </Grid>        
