--- a/MPfm/MPfm.WPF/Classes/Windows/UpdateLibraryWindow.xaml
+++ b/MPfm/MPfm.WPF/Classes/Windows/UpdateLibraryWindow.xaml
@@ -4,46 +4,50 @@
         xmlns:base="clr-namespace:MPfm.WPF.Classes.Windows.Base"
         xmlns:controls="clr-namespace:MPfm.WPF.Classes.Controls"
         WindowStartupLocation="CenterScreen" Background="#FF242F35"
-        Title="Update Library" Height="426" Width="677.9" Icon="/MPfm.WPF;component/Resources/Icon.ico">
+        Title="Update Library" Height="153" Width="488.9" Icon="/MPfm.WPF;component/Resources/Icon.ico">
     <Grid Margin="0">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition />
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0" Orientation="Vertical" Margin="4">
-            <Label Content="Update Library" Foreground="White" FontSize="16" FontWeight="Bold" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" Padding="4,2,4,2" />
-            <Label x:Name="lblIPAddress" Content="My IP address is" Foreground="#FFCCCCCC" FontSize="12" FontFamily="/Resources/Fonts/#Junction" Padding="4,2,4,2" />
-        </StackPanel>
-        <ListView Grid.Row="1">
-        </ListView>
-        <Grid Grid.Row="2" Margin="2">
+        <Grid Grid.Row="0" Background="#FF455865">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
                 <ColumnDefinition />
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
-            <Button Grid.Column="0" x:Name="btnRefresh">
-                <StackPanel Orientation="Horizontal" Margin="8">
-                    <Image Source="/Resources/Images/Buttons/refresh.png" Stretch="None" />
-                    <TextBlock Margin="6,0,0,0">Refresh devices</TextBlock>
+            <Label Grid.Column="0" Content="Update Library" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" />
+            <Button Grid.Column="1" x:Name="btnOK" Style="{StaticResource HeaderImageButton}" Click="btnOK_OnClick">
+                <StackPanel Orientation="Horizontal" Margin="4">
+                    <Image Source="/Resources/Images/Buttons/ok.png" Stretch="None" />
+                    <TextBlock Margin="6,1,0,0">OK</TextBlock>
                 </StackPanel>
             </Button>
-            <StackPanel Grid.Column="1"></StackPanel>
-            <Button Grid.Column="2" x:Name="btnManualConnect">
-                <StackPanel Orientation="Horizontal" Margin="8">
-                    <Image Source="/Resources/Images/Buttons/connect.png" Stretch="None" />
-                    <TextBlock Margin="6,0,0,0">Connect manually to device</TextBlock>
+            <Button Grid.Column="2" x:Name="btnCancel" Style="{StaticResource HeaderImageButton}" Click="btnCancel_OnClick">
+                <StackPanel Orientation="Horizontal" Margin="4">
+                    <Image Source="/Resources/Images/Buttons/cancel.png" Stretch="None" />
+                    <TextBlock Margin="6,1,0,0">Cancel</TextBlock>
                 </StackPanel>
             </Button>
-            <Button Grid.Column="3" x:Name="btnConnect">
-                <StackPanel Orientation="Horizontal" Margin="8">
-                    <Image Source="/Resources/Images/Buttons/connect.png" Stretch="None" />
-                    <TextBlock Margin="6,0,0,0">Connect to device</TextBlock>
+            <Button Grid.Column="3" x:Name="btnSaveLog" Style="{StaticResource HeaderImageButton}" Click="btnSaveLog_OnClick">
+                <StackPanel Orientation="Horizontal" Margin="4">
+                    <Image Source="/Resources/Images/Buttons/save.png" Stretch="None" />
+                    <TextBlock Margin="6,1,0,0">Save Log</TextBlock>
                 </StackPanel>
             </Button>
-        </Grid>        
+        </Grid>
+        <Grid Grid.Row="1" Margin="6">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="20" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <TextBlock Grid.Row="0" x:Name="lblTitle" Margin="4" Foreground="White" FontSize="11" FontFamily="/Resources/Fonts/#Junction">Loading...</TextBlock>
+            <TextBlock Grid.Row="1" x:Name="lblSubtitle" Margin="4" Foreground="#CCCCCC" FontSize="11" FontFamily="/Resources/Fonts/#Junction">Loading...</TextBlock>
+            <ProgressBar Grid.Row="2" x:Name="progressBar" Background="#FF242F35" BorderBrush="#FF242F35" Foreground="#FFE74C3C" Value="50" Margin="4" />
+        </Grid>
     </Grid>
 </base:BaseWindow>
