--- a/MPfm/MPfm.WPF/Classes/Windows/MainWindow.xaml
+++ b/MPfm/MPfm.WPF/Classes/Windows/MainWindow.xaml
@@ -4,9 +4,15 @@
         xmlns:base="clr-namespace:MPfm.WPF.Classes.Windows.Base"        
         xmlns:converters="clr-namespace:MPfm.WPF.Classes.Converters"        
         xmlns:models="clr-namespace:MPfm.MVP.Models;assembly=MPfm.MVP"
+        xmlns:wf="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"
+        xmlns:wc="clr-namespace:MPfm.WindowsControls;assembly=MPfm.WindowsControls"
         WindowStartupLocation="CenterScreen"
         Title="Sessions" Height="600" Width="900" Icon="/MPfm.WPF;component/Resources/Icon.ico">
     <Window.Resources>
+        <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="#FFD0DBE2" />
+        <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="Transparent" />
+        <SolidColorBrush x:Key="{x:Static SystemColors.HighlightTextBrushKey}" Color="Black" />
+        <SolidColorBrush x:Key="{x:Static SystemColors.ControlTextBrushKey}" Color="Black" />
         <converters:LibraryBrowserImagePathConverter x:Key="LibraryBrowserImagePathConverter" />
         <Style x:Key="TreeViewItemStyle" TargetType="TreeViewItem">
             <Setter Property="Margin" Value="0,2,0,2" />
@@ -57,7 +63,7 @@
                     <MenuItem x:Name="miHelp_About" Header="About Sessions..." Click="MenuItem_Click" />
                 </MenuItem>
             </Menu>
-            <Grid Margin="0" Background="#FF455865">
+            <Grid Margin="0" Background="#FF242F35">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="Auto" />
@@ -76,7 +82,7 @@
                     <Image Source="/Resources/Images/Toolbar/previous.png" Stretch="None" />
                 </Button>
                 <Button Grid.Column="1" x:Name="btnPlayPause" Style="{StaticResource PlayerButton}" Width="40" Height="40" ToolTip="Pauses or restarts the playback." Click="BtnToolbar_OnClick">
-                    <Image Source="/Resources/Images/Toolbar/play.png" Stretch="None" />
+                    <Image Source="/Resources/Images/Toolbar/play.png" Stretch="None" x:Name="imagePlayPause" />
                 </Button>
                 <Button Grid.Column="2" x:Name="btnNext" Style="{StaticResource PlayerButton}" Width="34" Height="34" ToolTip="Skips to the next song in the playlist." Click="BtnToolbar_OnClick">
                     <Image Source="/Resources/Images/Toolbar/next.png" Stretch="None" Margin="2,0,0,0" />
@@ -164,7 +170,7 @@
                         <RowDefinition />
                     </Grid.RowDefinitions>
                     <Grid Grid.Row="0">
-                        <Grid.RowDefinitions>
+                        <Grid.RowDefinitions>                            
                             <RowDefinition Height="Auto" />
                             <RowDefinition />
                         </Grid.RowDefinitions>
@@ -178,34 +184,36 @@
                             <Label Grid.Row="0" Content="Current Song" Background="#FF455865" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" />
                             <Grid Grid.Row="1">
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="170" />
                                     <ColumnDefinition />
                                     <ColumnDefinition Width="Auto" />
                                     <ColumnDefinition Width="Auto" />
                                 </Grid.ColumnDefinitions>
-                                <Image Grid.Column="0" Source="/Resources/Images/Icons/user.png" Stretch="Uniform" Width="120" Height="120" />
+                                <Image Grid.Column="0" x:Name="imageAlbum" Source="/Resources/Images/Icons/user.png" Stretch="Uniform" Width="170" Height="170" />
                                 <Grid Grid.Column="1">
                                     <Grid.RowDefinitions>
                                         <RowDefinition />
                                         <RowDefinition />
                                     </Grid.RowDefinitions>
-                                    <StackPanel Grid.Row="0" Orientation="Vertical">
-                                        <Label Content="[Artist Name]" Foreground="White" FontSize="22" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" />
-                                        <Label Content="[Album Title]" Foreground="White" FontSize="18" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" />
-                                        <Label Content="[Song Title]" Foreground="#DDDDDD" FontSize="16" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" />
-                                        <Label Content="[File Path]" Foreground="#CCCCCC" FontSize="12" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" />
+                                    <StackPanel Grid.Row="0" Orientation="Vertical" Margin="6">
+                                        <Label x:Name="lblArtistName" Content="[Artist Name]" Foreground="White" FontSize="22" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" Padding="1,1,1,1" />
+                                        <Label x:Name="lblAlbumTitle" Content="[Album Title]" Foreground="White" FontSize="18" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" Padding="1,1,1,1" />
+                                        <Label x:Name="lblSongTitle" Content="[Song Title]" Foreground="#DDDDDD" FontSize="16" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" Padding="1,3,3,3" />
+                                        <Label x:Name="lblFilePath" Content="[File Path]" Foreground="#CCCCCC" FontSize="12" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" Padding="1,3,0,3" />
                                     </StackPanel>
                                     <StackPanel Grid.Row="1" Orientation="Vertical">
-                                        <Label Content="Song Position / Length" Background="#FF455865" Foreground="White" FontSize="12" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" />
+                                        <Label Content="Song Position / Length" Background="#FF455865" Foreground="White" FontSize="12" FontFamily="/Resources/Fonts/#TitilliumText22L Lt" Padding="8,4,4,4" />
                                         <Grid>
                                             <Grid.ColumnDefinitions>
                                                 <ColumnDefinition Width="Auto" />
                                                 <ColumnDefinition />
                                                 <ColumnDefinition Width="Auto" />
                                             </Grid.ColumnDefinitions>
-                                            <Label Grid.Column="0" Content="00:00.000" Foreground="White" FontSize="15" FontFamily="/Resources/Fonts/#Droid Sans Mono" Margin="2" />
-                                            <Slider Grid.Column="1" VerticalAlignment="Center"></Slider>
-                                            <Label Grid.Column="2" Content="00:00.000" Foreground="White" FontSize="15" FontFamily="/Resources/Fonts/#Droid Sans Mono" Margin="2" />
+                                            <Label Grid.Column="0" x:Name="lblPosition" Content="00:00.000" Foreground="White" FontSize="15" FontFamily="/Resources/Fonts/#Droid Sans Mono" Margin="2" />
+                                            <WindowsFormsHost Grid.Column="1">
+                                                <wc:TrackBar x:Name="trackPosition" />
+                                            </WindowsFormsHost>
+                                            <Label Grid.Column="2" x:Name="lblLength" Content="00:00.000" Foreground="White" FontSize="15" FontFamily="/Resources/Fonts/#Droid Sans Mono" Margin="2" />
                                         </Grid>
                                     </StackPanel>
                                 </Grid>
@@ -240,10 +248,14 @@
                                                 <Grid Grid.Row="0">
                                                     <Grid.ColumnDefinitions>
                                                         <ColumnDefinition />
-                                                        <ColumnDefinition />
+                                                        <ColumnDefinition Width="40" />
                                                     </Grid.ColumnDefinitions>
-                                                    <Slider Grid.Column="0" Orientation="Vertical" Margin="4" />
-                                                    <StackPanel Grid.Column="1" Background="HotPink" Width="40"></StackPanel>
+                                                    <WindowsFormsHost Grid.Column="0">
+                                                        <wc:Fader x:Name="faderVolume" />
+                                                    </WindowsFormsHost>
+                                                    <WindowsFormsHost Grid.Column="1">
+                                                        <wc:OutputMeter x:Name="outputMeter" />
+                                                    </WindowsFormsHost>
                                                 </Grid>
                                                 <Label Grid.Row="1" Content="100 %" Foreground="White" HorizontalContentAlignment="Center" />
                                             </Grid>
@@ -255,11 +267,15 @@
                         <!-- Loops & Markers -->
                         <Grid Grid.Row="1">
                             <Grid.RowDefinitions>
+                                <RowDefinition Height="60" />
                                 <RowDefinition Height="Auto" />
-                                <RowDefinition Height="120" />
+                                <RowDefinition />
                             </Grid.RowDefinitions>
-                            <StackPanel Grid.Row="0" Background="#FF1A1E21" Height="60"></StackPanel>
-                            <Grid Grid.Row="1">
+                            <WindowsFormsHost Grid.Row="0">
+                                <wc:WaveFormDisplay x:Name="waveFormDisplay" />
+                            </WindowsFormsHost>
+                            <GridSplitter Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Center" Background="#FF242F35" ShowsPreview="True" Height="4" />
+                            <Grid Grid.Row="2">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition />
                                     <ColumnDefinition Width="Auto" />
@@ -358,14 +374,14 @@
                         </Grid>
                     </Grid>
                     <GridSplitter Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Center" Background="#FF242F35" ShowsPreview="True" Height="4" />
-                    <Grid Grid.Row="2">
+                    <Grid Grid.Row="2" Background="#FF455865">
                         <!-- Song Browser -->
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto" />
                                 <RowDefinition />
                             </Grid.RowDefinitions>
-                            <Grid Grid.Row="0" Background="White">
+                            <Grid Grid.Row="0">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition />
                                     <ColumnDefinition Width="Auto" />
@@ -376,12 +392,13 @@
                                         <ColumnDefinition />
                                         <ColumnDefinition Width="Auto" />
                                     </Grid.ColumnDefinitions>
-                                    <TextBox Grid.Column="0" Width="200" Padding="0,2,0,0" Background="White" Foreground="Black" BorderBrush="#00FFFFFF" FontSize="12" FontFamily="/Resources/Fonts/#Junction" />
+                                    <TextBox x:Name="txtSearchTerms" Grid.Column="0" Width="200" Padding="0,2,0,0" Background="White" Foreground="Black" BorderBrush="#00FFFFFF" FontSize="12" FontFamily="/Resources/Fonts/#Junction" TextChanged="txtSearchTerms_TextChanged" />
                                     <Image Grid.Column="1" Source="/Resources/Images/Icons/search.png" Stretch="None" Margin="4,0,2,0" />
                                 </Grid>
                             </Grid>
-                            <ListView Grid.Row="1" x:Name="listViewSongBrowser">
-                            </ListView>
+                            <WindowsFormsHost Grid.Row="1">
+                                <wc:SongGridView x:Name="gridViewSongs" OnSelectedIndexChanged="gridViewSongs_OnOnSelectedIndexChanged" />
+                            </WindowsFormsHost>                            
                         </Grid>
                     </Grid>
                 </Grid>
