--- a/MPfm/MPfm.Android/Resources/Layout/ResumePlayback.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/ResumePlayback.axml
@@ -6,34 +6,12 @@
   android:orientation="vertical"
   android:background="@color/background">
   <TextView
-    android:id="@+id/resumePlayback_lblIPAddress"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="6dp"
-    android:text="Please select a device to resume from:"
+    android:padding="8dp"
+    android:text="Please select a device from the list to resume playback:"
     android:textSize="14dp"
     android:textColor="#CCCCCC" />
-  <LinearLayout
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:padding="6dp"
-    android:orientation="horizontal"
-    android:gravity="center_vertical">
-    <ProgressBar
-      android:id="@+id/resumePlayback_progressBar"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"      
-      style="@android:style/Widget.ProgressBar.Small"
-      android:indeterminate="true" />
-    <TextView
-      android:id="@+id/resumePlayback_lblStatus"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"     
-      android:layout_marginLeft="8dp"      
-      android:text="Refreshing devices..."
-      android:textSize="16dp"
-      android:textColor="#FFFFFF" />
-  </LinearLayout>
   <ListView
     android:id="@+id/resumePlayback_listView"
     android:layout_width="fill_parent"
@@ -44,13 +22,4 @@
     android:divider="#BBBBBB"
     android:dividerHeight="1px"
     android:listSelector="@drawable/list" />
-  <Button
-    android:id="@+id/resumePlayback_btnConnectManually"    
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    android:background="@drawable/button"
-    android:text="Connect manually to device"
-    android:textColor="@color/button_textcolor"
-    android:textSize="14dp" />
 </LinearLayout>
