--- a/MPfm/MPfm.WPF/Classes/App.xaml
+++ b/MPfm/MPfm.WPF/Classes/App.xaml
@@ -2,10 +2,16 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              Startup="App_Startup">
-    <Application.Resources>
+    <Application.Resources>        
+        <!--<Style TargetType="ProgressBar">
+            <Setter Property="OverridesDefaultStyle" Value="True" />
+            <Setter Property="Background" Value="#FF242F35" />
+            <Setter Property="Foreground" Value="#FFE74C3C" />
+            <Setter Property="BorderBrush" Value="#FF242F35" />
+        </Style>-->
         <Style TargetType="Button">
             <!--Set to true to not get any properties from the themes.-->
-            <Setter Property="OverridesDefaultStyle" Value="True"/>
+            <Setter Property="OverridesDefaultStyle" Value="True" />
             <Setter Property="Foreground" Value="White" />
             <Setter Property="Padding" Value="6" />
             <Setter Property="Margin" Value="2" />
